# why

./: .gitignore  CMakeLists.txt  DESIGN.md  DEV_GUIDE.md  EVENT_DRIVEN_DESIGN.md  EVENT_DRIVEN_IMPLEMENTATION.md  EVENT_DRIVEN_MIGRATION_STATUS.md  IMPROVE.md  LICENSE  PHASE3.md  README.md  STEPS.md  TEXT.md  why.toml  why.toml.example
assets/: ascii_matrix.txt  bar.txt  breathe_animation.txt  cyber_rain.txt  dune.txt  lightning_wave.txt  logging_animation.txt
src/: audio_engine.cpp  audio_engine.h  config.cpp  config.h  dsp.cpp  dsp.h  main.cpp  plugins.cpp  plugins.h  renderer.cpp  renderer.h
src/animations/: animation.h  animation_event_utils.h  animation_manager.cpp  animation_manager.h  ascii_matrix_animation.cpp  ascii_matrix_animation.h  bar_visual_animation.cpp  bar_visual_animation.h  breathe_animation.cpp  breathe_animation.h  cyber_rain_animation.cpp  cyber_rain_animation.h  glyph_utils.cpp  glyph_utils.h  lightning_wave_animation.cpp  lightning_wave_animation.h  logging_animation.cpp  logging_animation.h  random_text_animation.cpp  random_text_animation.h  static_circle_animation.cpp  static_circle_animation.h
src/config/: animation_config_parser.cpp  animation_config_parser.h  raw_config.cpp  raw_config.h  value_parsers.cpp  value_parsers.h
src/events/: event_bus.h  frame_events.h
